// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`head tag during server renders nothing and adds tags to headTags context array 1`] = `"<div>Yes render</div>"`;

exports[`head tag during server renders nothing and adds tags to headTags context array 2`] = `
Array [
  <title
    data-rh=""
  >
    Title
  </title>,
  <style
    data-rh=""
  >
    body {}
  </style>,
  <link
    data-rh=""
    href="index.css"
  />,
  <meta
    charset="utf-8"
    data-rh=""
  />,
]
`;

exports[`head tag during server renders only the last meta with the same name 1`] = `
Array [
  <meta
    data-rh=""
  >
    Meta 2
  </meta>,
  <meta
    data-rh=""
    name="1"
  >
    Meta 3
  </meta>,
  <meta
    data-rh=""
    name="3"
  >
    Meta 5
  </meta>,
  <meta
    data-rh=""
    name="2"
  >
    Meta 6
  </meta>,
]
`;

exports[`head tag during server renders only the last title 1`] = `
Array [
  <title
    data-rh=""
  >
    Title 3
  </title>,
]
`;
